main/default/objects/Employee__c/fields/Car_center__c.field-meta.xml
<CustomField>
    <fullName>Car_center__c</fullName>
    <label>Сar center</label>
    <referenceTo>Car_center__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>