main/default/objects/Employee__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Service Engineer</fullName>
            </value>
            <value>
                <fullName>Lawyer</fullName>
            </value>
            <value>
                <fullName>Salesman</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>