main/default/objects/Employee__c/fields/Start_Working__c.field-meta.xml
<CustomField>
    <fullName>Start_Working__c</fullName>
    <label>Start Working</label>
    <type>Date</type>
</CustomField>